functional tests for controller and launcher

--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=edge
+browser=chrome, firefox
 #options: all, chrome, firefox, edge, opera, safari
 #default: all
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated.
@@ -9,7 +9,7 @@ mode=scheduled
 #description: Defines run time mode of webdoggy service
 # <realtime> means it will sniff history as it is recorded
 # <scheduled> means it will run cron jobs after every time window
-schedule_window=1m
+schedule_window=1w
 #options: <number>m/h/d
 #default: 1m
 #description: Defines the time delay between every browser read iteration
@@ -25,10 +25,9 @@ rotation=1m
 #options: <number>m/h/d
 #default: 1h (hour)
 #description: Defines the history log rotation time in mins/hours/days
-deletion=1w,90%
+deletion=1w
 #options <number>w/m/y
 #default 1w (week)
 #description Defines the retention period of webdoggy history logs in weeks/months/years
 # if set to 0, no history logs will be deleted
-
 
