preliminary testing before demo; light changes made

--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=chrome, firefox
+browser=edge,chrome
 #options: all, chrome, firefox, edge, opera, safari
 #default: all
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated.
@@ -13,8 +13,8 @@ schedule_window=1w
 #options: <number>m/h/d
 #default: 1m
 #description: Defines the time delay between every browser read iteration
-logdir=/opt/browsermon/history
-#options: c:\webdoggy\history, /opt/webdoggy/history
+logdir=/home/appleconda/Documents/Files/browsermon/history
+#optins: c:\webdoggy\history, /opt/webdoggy/history
 #default: c:\webdoggy\history, /opt/webdoggy/history
 #description: Defines the location of history log files generated
 logmode=csv
