--- a/browsermon.conf
+++ b/browsermon.conf
@@ -9,15 +9,15 @@ mode=scheduled
 #description: Defines run time mode of webdoggy service
 # <realtime> means it will sniff history as it is recorded
 # <scheduled> means it will run cron jobs after every time window
-schedule_window=1w
+schedule_window=1m
 #options: <number>m/h/d
 #default: 1m
 #description: Defines the time delay between every browser read iteration
-logdir=/home/appleconda/Documents/Files/browsermon/history
-#optins: c:\webdoggy\history, /opt/webdoggy/history
+logdir=/opt/browsermon/history
+#optins: c:\webdoggy\history, /opt/wvbdoggy/history
 #default: c:\webdoggy\history, /opt/webdoggy/history
 #description: Defines the location of history log files generated
-logmode=csv
+logmode=json
 #options: csv, json
 #default: csv
 #description: Defines the history log file format
