In comments changed references to name from 'webdoggy' to 'browsermon'

--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,12 +1,12 @@
 [default]
 browser=edge,chrome
-#options: all, chrome, firefox, edge, opera, safari
+#options: all, chrome, edge
 #default: all
-#description: Defines which browser to monitor. Mention multiple browsers as comma separated.
-mode=scheduled
-#options: scheduled, realtime
+#description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.
+mode=real-time
+#options: scheduled, real-time
 #default: scheduled
-#description: Defines run time mode of webdoggy service
+#description: Defines run time mode of browserMon service
 # <realtime> means it will sniff history as it is recorded
 # <scheduled> means it will run cron jobs after every time window
 schedule_window=1m
@@ -14,8 +14,7 @@ schedule_window=1m
 #default: 1m
 #description: Defines the time delay between every browser read iteration
 logdir=/opt/browsermon/history
-#optins: c:\webdoggy\history, /opt/wvbdoggy/history
-#default: c:\webdoggy\history, /opt/webdoggy/history
+#default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux) 
 #description: Defines the location of history log files generated
 logmode=json
 #options: csv, json
