--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,9 +1,9 @@
 [default]
-browser=edge,chrome
+browser=edge
 #options: all, chrome, edge
 #default: all
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.
-mode=real-time
+mode=scheduled
 #options: scheduled, real-time
 #default: scheduled
 #description: Defines run time mode of browserMon service
@@ -16,11 +16,11 @@ schedule_window=1m
 logdir=/opt/browsermon/history
 #default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux) 
 #description: Defines the location of history log files generated
-logmode=json
+logmode=csv
 #options: csv, json
 #default: csv
 #description: Defines the history log file format
-rotation=1m
+rotation=1h
 #options: <number>m/h/d
 #default: 1h (hour)
 #description: Defines the history log rotation time in mins/hours/days
@@ -29,4 +29,3 @@ deletion=1w
 #default 1w (week)
 #description Defines the retention period of webdoggy history logs in weeks/months/years
 # if set to 0, no history logs will be deleted
-
