--- a/service/browsermon.service
+++ b/service/browsermon.service
@@ -7,6 +7,7 @@ Type=simple
 Restart=always
 WorkingDirectory=/opt/browsermon
 ExecStart=/usr/bin/python3 src/controller.py
+KillSignal=SIGTERM
 
 [Install]
 WantedBy=multi-user.target
