--- a/browsermon.conf
+++ b/browsermon.conf
@@ -13,7 +13,7 @@ schedule_window=1m
 #options: <number>m/h/d
 #default: 1m
 #description: Defines the time delay between every browser read iteration
-logdir=/opt/browsermon/history
+logdir=C:\\browsermon\\history
 #default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux)
 #description: Defines the location of history log files generated
 logmode=csv
