removed size based rotation

--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=chrome
+browser=edge
 #options: all, chrome, edge
 #default: all
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.
@@ -20,22 +20,7 @@ logmode=json
 #options: csv, json
 #default: csv
 #description: Defines the history log file format
-rotation_type=by_time
-#options: by_size, by_time
-#default: by_size
-#description: Defines the history log rotation type
-# <by_size> means it will rotate history logs based on size
-# <by_time> means it will rotate history logs based on time
-rotation_window=1m
-#options: <number>m/h/d only if rotation_type=by_time 
+rotation=1m
+#options: <number>m/h/d only 
 #default: 1h (hour)
 #description: Defines the history log rotation time in mins/hours/days
-rotation_maxBytes=500
-#options: <number> bytes only if rotation_type=by_size
-#default: 500 bytes
-#description: Defines the maxBytes of history log file rotation by size
-backup_count=5
-#options <number>w/m/y
-#default 1w (week)
-#description Defines the retention period of webdoggy history logs in weeks/months/years
-# if set to 0, no history logs will be deleted
