updated setup for windows-service integeration

--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=edge
+browser=all
 #options: all, chrome, edge
 #default: all
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.
@@ -13,14 +13,15 @@ schedule_window=1m
 #options: <number>m/h/d
 #default: 1m
 #description: Defines the time delay between every browser read iteration
-logdir=/opt/browsermon/history
+logdir=C:\\browsermon\\history
 #default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux) 
 #description: Defines the location of history log files generated
 logmode=json
 #options: csv, json
 #default: csv
 #description: Defines the history log file format
-rotation=1m
+rotation=1h
 #options: <number>m/h/d only 
 #default: 1h (hour)
 #description: Defines the history log rotation time in mins/hours/days
+backup_count=5
