--- a/.github/workflows/pyinstaller-windows.yml
+++ b/.github/workflows/pyinstaller-windows.yml
@@ -17,8 +17,8 @@ jobs:
       uses: JackMcKew/pyinstaller-action-windows@python3-10-pyinstaller-5-3
       with:
         path: src
-        spec: browsermon.spec
-        requirements: requirements.txt
+        spec: /browsermon.spec
+        requirements: /requirements.txt
 
     - uses: actions/upload-artifact@v2
       with:
