--- a/service/browsermon.service
+++ b/service/browsermon.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=simple
 Restart=always
 WorkingDirectory=/opt/browsermon
-ExecStart=/opt/browsermon/venv/bin/python3 src/browsermon.py
+ExecStart=/opt/browsermon/browsermon
 KillSignal=SIGTERM
 
 [Install]
