--- a/browsermon.conf
+++ b/browsermon.conf
@@ -13,7 +13,7 @@ schedule_window=1m
 #options: <number>m/h/d , Specify a numeric value followed by "m" (minutes), "h" (hours), or "d" (days).
 #default: 1m
 #description: Defines the time delay between every browser read iteration Specify a numeric value followed by "m" (minutes), "h" (hours), or "d" (days).
-logdir=/home/appleconda/Developer/history/
+logdir=C:\\browsermon\\history
 #default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux) 
 #description: Defines the location of history log files generated This configuration defines the directory path where the recorded history log files will be stored.
 logmode=json
