--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.Ds_Store
+.DS_Store
