--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=all
+browser=firefox
 #options: Choose from "all" (monitors all supported browsers), "chrome" (monitors Google Chrome), or "edge" (monitors Microsoft Edge).
 #default: Monitor all supported browsers simultaneously
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.This option determines the browser(s) that the browserMon service will keep track of.
@@ -16,7 +16,7 @@ schedule_window=1m
 logdir=C:\\browsermon\\history
 #default: C:\browsermon\history (for windows), /opt/webdoggy/history (for linux) 
 #description: Defines the location of history log files generated This configuration defines the directory path where the recorded history log files will be stored.
-logmode=csv
+logmode=json
 #options: csv, json
 #default: csv
 #description: Defines the history log file formatThis option sets the file format for the generated history log files.
