--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -2,8 +2,8 @@ name: Build Executeable
 
 on: 
     push: 
-        branches: 
-            - develop
+        tags: 
+            - 'v*.*.*'
     workflow_dispatch: 
 
 jobs:
@@ -129,3 +129,35 @@ jobs:
               with:
                 name: browsermon_linux_x64
                 path: artifact/
+    create_release: 
+      runs-on: ubuntu-latest
+      needs: [build_win_x86, build_win_x64, build_linux_x86]
+      steps:
+        - name: Download Artifacts
+          uses: actions/download-artifact@v2
+          with:
+            name: browsermon_win_x86
+            path: browsermon_win_x86
+
+        - name: Download Artifacts
+          uses: actions/download-artifact@v2
+          with:
+            name: browsermon_win_x64
+            path: browsermon_win_x64
+
+        - name: Download Artifacts
+          uses: actions/download-artifact@v2
+          with:
+            name: browsermon_linux_x64
+            path: browsermon_linux_x64
+        
+        - name: Create Github Release
+          uses: softprops/action-gh-release@v1
+          with:
+            files: |
+              browsermon_win_x86
+              browsermon_win_x64
+              browsermon_linux_x64
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+            
