--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller --hiddenimport win32timezone -F --add-binary '${LIBRARY_NAME}_win64.dll;.' src/browsermon.py
+          pyinstaller --hiddenimport win32timezone -F --add-binary '${{ runner.workspace }}/${LIBRARY_NAME}_win64.dll;.' src/browsermon.py
 
       - name: Prepare Files for upload
         run: |
@@ -142,7 +142,7 @@ jobs:
 
       - name: Build
         run: |
-          pyinstaller --hiddenimport win32timezone -F --add-binary '${LIBRARY_NAME}_win32.dll;.' src/browsermon.py
+          pyinstaller --hiddenimport win32timezone -F --add-binary '${{ runner.workspace }}/${LIBRARY_NAME}_win32.dll;.' src/browsermon.py
 
       - name: Prepare Files for upload
         run: |
@@ -186,7 +186,7 @@ jobs:
 
       - name: Create Executeable
         run: |
-          pyinstaller -F --add-binary '${LIBRARY_NAME}_linux64.so;.' src/browsermon.py
+          pyinstaller -F --add-binary '${{ runner.workspace }}/${LIBRARY_NAME}_linux64.so;.' src/browsermon.py
 
       - name: Prepare files for upload
         run: |
