--- a/browsermon.conf
+++ b/browsermon.conf
@@ -1,5 +1,5 @@
 [default]
-browser=firefox
+browser=edge
 #options: Choose from "all" (monitors all supported browsers), "chrome" (monitors Google Chrome), or "edge" (monitors Microsoft Edge).
 #default: Monitor all supported browsers simultaneously
 #description: Defines which browser to monitor. Mention multiple browsers as comma separated without white spaces.This option determines the browser(s) that the browserMon service will keep track of.
