--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -248,7 +248,7 @@ jobs:
 
   create_release:
     runs-on: ubuntu-latest
-    needs: [ build_win_x64, build_win_x86, build_linux_x64 ]
+    needs: [ build_win_x64, build_linux_x64 ]
 
     steps:
       - name: Download Artifact win-x64
