--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -8,7 +8,6 @@ on:
 env:
   TAG_NAME: ${{ github.ref_name }}
   BRANCH_NAME: "release-${{ github.ref_name }}"
-  LIBRARY_NAME: "json_writer"
 
 jobs:
   update_version:
@@ -24,7 +23,6 @@ jobs:
         run: |
           echo "${{ env.TAG_NAME }}"
           echo "${{ env.BRANCH_NAME }}"
-          echo "${{ env.LIBRARY_NAME }}"
 
       - id: change_version
         run: |
@@ -38,60 +36,59 @@ jobs:
           branch: ${{ env.BRANCH_NAME }}
           create_branch: true
 
-  build_shared_library_win:
-    runs-on: windows-latest
+  build_shared_library:
+    name: Build Shared Library
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install MinGW
+      - name: Install Dependencies
         run: |
-          choco install mingw -y --params "/exceptions:seh /arch: x86_64"
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            choco install mingw -y --params "/exceptions:seh /arch: x86_64"
+          else
+            sudo apt-get update
+            sudo apt-get install -y build-essential
+          fi
 
-      - name: Build shared library for Windows
+      - name: Build Shared Library
         run: |
-          gcc -shared -o json_writer_win64.dll -fPIC src/json_writer.c
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            gcc -shared -o json_writer_win64.dll -fPIC src/json_writer.c
+          else
+            gcc -shared -o json_writer_linux64.so -fPIC src/json_writer.c
+          fi
 
       - name: Prepare Files for upload
         run: |
-          mkdir windows-libraries
-          cp json_writer_win64.dll windows-libraries/
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            mkdir windows-libraries
+            cp json_writer_win64.dll windows-libraries/
+          else
+            mkdir linux-libraries
+            cp json_writer_linux64.so linux-libraries/
+          fi
 
-      - name: Upload Windows Libraries
+      - name: Upload Libraries
         uses: actions/upload-artifact@v3
         with:
-          name: windows-libraries
-          path: windows-libraries/
+          name: ${{ matrix.os }}-libraries
+          path: |
+            ${{ matrix.os }}-libraries/
 
-  build_shared_library_linux:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install build dependencies for Linux
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential
-
-      - name: Build shared library for Linux
-        run: |
-          gcc -shared -o ${LIBRARY_NAME}_linux64.so -fPIC src/json_writer.c
-      - name: Prepare Files for upload
-        run: |
-          mkdir linux-libraries
-          cp ${LIBRARY_NAME}_linux64.so linux-libraries/
-      - name: Upload Linux Libraries
-        uses: actions/upload-artifact@v3
-        with:
-          name: linux-libraries
-          path: linux-libraries/
-
-  build_win_x64:
-    runs-on: windows-latest
-    needs: [ build_shared_library_win ]
+  build_binary:
+    name: Build Binary
+    needs: build_shared_library
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        architecture: [x64]
 
     steps:
       - name: Checkout
@@ -103,136 +100,36 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-          architecture: 'x64'
+          architecture: ${{ matrix.architecture }}
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pywin32
           pip install -r requirements.txt
 
-      - name: Download Windows Libraries
+      - name: Download Libraries
         uses: actions/download-artifact@v3
         with:
-          name: windows-libraries
-          path: windows-libraries
+          name: ${{ matrix.os }}-libraries
+          path: ${{ matrix.os }}-libraries
 
       - name: Build
         run: |
-          pyinstaller --hiddenimport win32timezone -F --add-binary "windows-libraries/json_writer_win64.dll:." src/browsermon.py
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            choco install mingw -y --params "/exceptions:seh /arch: x86"
+            gcc -m32 -shared -o json_writer_win32.dll -fPIC src/json_writer.c
+            pyinstaller --hiddenimport win32timezone -F --add-binary "windows-libraries/json_writer_win32.dll:." src/browsermon.py
+          else
+            pyinstaller -F --add-binary "${{ matrix.os }}-libraries/json_writer_linux64.so:." src/browsermon.py
+          fi
 
       - name: Prepare Files for upload
         run: |
           mkdir artifact
-          copy dist\browsermon.exe artifact\
+          cp dist/browsermon artifact/
           cp README.md artifact/
           cp browsermon.conf artifact/
-          cp win_install.ps1 artifact/
-          cp win_uninstall.ps1 artifact/
-
-      - name: Create Troubleshooter exe
-        run: pyinstaller -F troubleshoot/browsermon_ts.py
-
-      - name: Copy troubleshooter executeable
-        run: copy dist\browsermon_ts.exe artifact\
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: browsermon-win-x64
-          path: artifact/
-
-#  build_win_x86:
-#    runs-on: windows-latest
-#    needs: [ build_shared_library_win ]
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#        with:
-#          ref: ${{ env.BRANCH_NAME }}
-#
-#      - name: Setup Python
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: '3.9'
-#          architecture: 'x86'
-#
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install pywin32
-#          pip install -r requirements.txt
-#
-#      - name: Download Windows Libraries
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: windows-libraries
-#          path: windows-libraries
-#
-#      - name: Build
-#        run: |
-#          pyinstaller --hiddenimport win32timezone -F --add-binary "windows-libraries/json_writer_win32.dll:." src/browsermon.py
-#
-#      - name: Prepare Files for upload
-#        run: |
-#          mkdir artifact
-#          copy dist\browsermon.exe artifact\
-#          cp README.md artifact/
-#          cp browsermon.conf artifact/
-#          cp win_install.ps1 artifact/
-#          cp win_uninstall.ps1 artifact/
-#
-#      - name: Create Troubleshooter exe
-#        run: pyinstaller -F troubleshoot/browsermon_ts.py
-#
-#      - name: Copy troubleshooter executeable
-#        run: copy dist\browsermon_ts.exe artifact\
-#
-#      - name: Upload Artifact
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: browsermon-win-x86
-#          path: artifact/
-
-  build_linux_x64:
-    runs-on: ubuntu-latest
-    needs: [ build_shared_library_linux ]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ env.BRANCH_NAME }}
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-          architecture: x64
-
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-
-      - name: Download Linux Libraries
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-libraries
-          path: linux-libraries
-
-      - name: Create Executeable
-        run: |
-          pyinstaller -F --add-binary "linux-libraries/json_writer_linux64.so:." src/browsermon.py
-
-      - name: Prepare files for upload
-        run: |
-          mkdir artifact
-          cp dist/browsermon artifact/ 
-          cp -r service/ artifact/
-          cp README.md artifact/
-          cp browsermon.conf artifact/
-          cp linux_install.sh artifact/
-          cp linux_uninstall.sh artifact/
 
       - name: Create Troubleshooter exe
         run: pyinstaller -F troubleshoot/browsermon_ts.py
@@ -243,57 +140,33 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: browsermon-linux-x64
+          name: browsermon-${{ matrix.os }}-${{ matrix.architecture }}
           path: artifact/
 
   create_release:
+    name: Create Release
     runs-on: ubuntu-latest
-    needs: [ build_win_x64, build_linux_x64 ]
+    needs: [ build_binary ]
 
     steps:
-      - name: Download Artifact win-x64
+      - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: browsermon-win-x64
-          path: browsermon-win-x64
+          name: browsermon-${{ matrix.os }}-${{ matrix.architecture }}
+          path: browsermon-${{ matrix.os }}-${{ matrix.architecture }}
 
-      - name: Zip Dowloaded Artifact win-x64
+      - name: Zip Downloaded Artifacts
         run: |
-          cd browsermon-win-x64
-          zip -r browsermon-win-x64.zip *
-          cd ..
-
-#      - name: Download Artifact win-x86
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: browsermon-win-x86
-#          path: browsermon-win-x86
-#
-#      - name: Zip Dowloaded Artifact win-x86
-#        run: |
-#          cd browsermon-win-x86
-#          zip -r browsermon-win-x86.zip *
-#          cd ..
-
-      - name: Download Artifact linux-x64
-        uses: actions/download-artifact@v3
-        with:
-          name: browsermon-linux-x64
-          path: browsermon-linux-x64
-
-      - name: Zip Dowloaded Artifact linux-x64
-        run: |
-          cd browsermon-linux-x64
-          zip -r browsermon-linux-x64.zip *
+          cd browsermon-${{ matrix.os }}-${{ matrix.architecture }}
+          zip -r browsermon-${{ matrix.os }}-${{ matrix.architecture }}.zip *
           cd ..
 
       - name: Create Release
-        id: create_release_win_x64
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            browsermon-win-x64/browsermon-win-x64.zip
-            browsermon-linux-x64/browsermon-linux-x64.zip
+            browsermon-${{ matrix.os }}-${{ matrix.architecture }}/browsermon-${{ matrix.os }}-${{ matrix.architecture }}.zip
 
           prerelease: false
         env:
